# TOSTI-fridge-client

./: .gitignore  README.md  SCANNER_MANUAL.md  install_tosti_service.sh  manage_tosti.sh  pyproject.toml  setup_env.sh
.github/workflows/: linting.yaml
client/: client.py  exceptions.py  fakefridge.py  fridge.py  lock.py  observer.py  scanners.py
client/api/: apiservice.py  clientcredentials.py
client/settings/: development.py  production.py  production.py.example  settings.py
