[tool.poetry]
name = "tosti-fridge-client"
version = "0.1.0"
description = "A client for managing access to the canteen fridges, connected to TOSTI"
authors = ["Job Doesburg <job.doesburg@gmail.com>, Lars van Rhijn <larsvanrhijn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "client"}]

[tool.poetry.dependencies]
# Current python version for Raspberry Pi
python = "^3.9"
oauthlib = "^3.2.2"
requests-oauthlib = "^1.3.1"
# The following opencv-python version has a precompiled download on https://piwheels.org/
opencv-python = "4.6.0.66"
numpy = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[tool.black]
line-length = 119
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels"
url = "https://piwheels.org/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "default"
