[tool.poetry]
name = "tosti-fridge-client"
version = "0.1.0"
description = "A client for managing access to the canteen fridges, connected to TOSTI"
authors = ["Job Doesburg <job.doesburg@gmail.com>, Lars van Rhijn <larsvanrhijn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "client"}]

[tool.poetry.dependencies]
# Core dependencies (work on all platforms)
python = "^3.11"
oauthlib = "^3.3.1"
requests-oauthlib = "^2.0.0"
pyserial = "^3.5.0"

[tool.poetry.group.production.dependencies]
"RPi.GPIO" = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[tool.black]
line-length = 119
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "piwheels"
url = "https://piwheels.org/simple/"
priority = "primary"